--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <article class="page">
       <header class="matrix">
-        <img class="matrix-img" src="./eisenhower-matrix.jpg">
+        <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
         <a class="matrix-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </header>
       <main class="to-do-list">
@@ -22,12 +22,12 @@
             <li class="task-item">
               <input type="checkbox" class="input"><label class="label task">Pay Bills</label>
               <input type="text" class="input task"><button class="btn edit-btn">Edit</button>
-              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg"></button>
+              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="delete button"></button>
             </li>
             <li class="edit-task task-item">
               <input type="checkbox" class="input"><label class="label task">Go Shopping</label>
               <input type="text" value="Go Shopping" class="input task"><button class="btn edit-btn">Save</button>
-              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg"></button>
+              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="delete button"></button>
             </li>
           </ul>
         </section>
@@ -37,7 +37,7 @@
             <li class="task-item">
               <input type="checkbox" class="input" checked><label class="label task">See the Doctor</label>
               <input type="text" class="input task"><button class="btn edit-btn">Edit</button>
-              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg"></button>
+              <button class="btn delete-btn"><img class="delete-btn-img" src="./remove.svg" alt="delete button"></button>
             </li>
           </ul>
         </section>
